# sailmidi

./: .gitmodules  CMakeLists.txt  LICENSE  harbour-sailmidi.desktop  sailmidi.desktop
qml/: sailmidi.qml
qml/cover/: CoverPage.qml
qml/pages/: AboutPage.qml  FirstPage.qml  MainPage.qml
rpm/: 0001-signed-unsigned-comparison.patch  sailmidi.changes.in  sailmidi.changes.run.in  sailmidi.spec
src/: midiplayer.cpp  midiplayer.h  midiportmodel.cpp  midiportmodel.h  sailmidi.cpp
